# derApkBuilder

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  make.rb  make.sh  project.yml
docs/: config.rst
example/: AndroidManifest.xml  myproject.keystore  project.yml
example/src/java/dev/trindadedev/myproject/: MainActivity.java
example/src/res/values/: strings.xml
include/: config.h  file_list.h  project.h  stdbool.h  util.h
src/: config.c  file_list.c  main.c  project.c  util.c
